Calling callback from different native threads causes a VM crash

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • None
    • Affects Version/s: repo-panama
    • Component/s: tools

      Under JNI, it is user responsibility to attach native threads to the VM using attachCurrentThread/detachCurrentThread.

      Panama doesn't do this and, as a result, if native code creates a new thread and uses it to call a Java callback, an hard crash occurs.

            Assignee:
            Maurizio Cimadamore
            Reporter:
            Maurizio Cimadamore
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: