8226250: Calling callback from different native threads causes a VM crash