src/hotspot/cpu/x86/directUpcallHandler_x86.cpp
@@ -29,6 +29,7 @@
 #include "memory/allocation.inline.hpp"
 #include "memory/resourceArea.hpp"
 #include "include/jvm.h"
+#include "jni.h"
 #include "prims/directUpcallHandler.hpp"
 #include "runtime/javaCalls.hpp"
 #include "runtime/interfaceSupport.inline.hpp"
@@ -36,6 +37,8 @@
 #include "logging/logStream.hpp"
 #include "oops/arrayOop.inline.hpp"
 #include "runtime/jniHandles.inline.hpp"
+
+extern struct JavaVM_ main_vm;
 
 static struct SpecializedUpcallInfo {
   bool inited;
@@ -121,6 +124,7 @@ struct upcall_context {
   int nlongs = (mask & ARG_MASK); \
   int ndoubles = ((mask >> ARG_SHIFT) & ARG_MASK); \
   int rettag = RES_TAG; \
+  void *p_env = NULL; \
 \
   JavaCallArguments args((1 + nlongs + ndoubles) * 2); \
 \
@@ -140,6 +144,11 @@ struct upcall_context {
   Method* meth = specialized_upcall_info[nlongs][ndoubles][rettag].meth; \
 \
   JavaThread* thread = JavaThread::current(); \
+  if (thread == NULL) { \
+    JavaVM_ *vm = (JavaVM *)(&main_vm); \
+    vm -> functions -> AttachCurrentThreadAsDaemon(vm, &p_env, NULL); \
+    thread = JavaThread::current(); \
+  } \
   ThreadInVMfromNative __tiv(thread); \
   JavaValue result(RES_T); \
   JavaCalls::call(&result, meth, &args, thread);
